src/content/docs/zh/sdk/react-native/v4/features/att.mdx
---
title: "设置 App Tracking Transparency"
description: "配置应用以使用 Apple 的 App Tracking Transparency 框架"
slug: "en/sdk/react-native/v4/features/att"
versions: 
    - 
        label: "v5"
        value: "v5"
        default: true
    - 
        label: "v4"
        value: "v4"
redirects: 
    v5: "/en/sdk/react-native/features/att"
---
如果您要记录设备的广告主 ID \(即 IDFA\)，需要先展示弹窗获得用户的授权。要达到这个目的，您需要在应用中添加 Apple 的 App Tracking Transparency \(ATT\) 框架。Adjust SDK 会存储用户的授权状态并在每次请求中将该信息发送至 Adjust 服务器。

授权状态\{\#authorization\-statuses\}
-------------------------------------

|                         状态                          | 代码  |            描述             |
|-----------------------------------------------------|-----|---------------------------|
| `ATTrackingManagerAuthorizationStatusNotDetermined` | `0` | 用户尚未对访问权限请求弹窗做出响应         |
| `ATTrackingManagerAuthorizationStatusRestricted`    | `1` | 用户已在设备层级禁止应用相关数据访问        |
| `ATTrackingManagerAuthorizationStatusDenied`        | `2` | 用户已拒绝授予可用于设备监测的应用相关数据访问权限 |
| `ATTrackingManagerAuthorizationStatusAuthorized`    | `3` | 用户已授予可用于设备监测的应用相关数据访问权限   |

<callout type="note"> 

如果 SDK 无法调取 ATT \(App Tracking Transparency\) 状态，那么您可能会收到 `-1` 状态代码。
</Callout> 

ATT 授权包装器\{\#att\-authorization\-wrapper\}
-----------------------------------------------

<codeblock title="方法签名"> 

```ts
requestTrackingAuthorizationWithCompletionHandler: (handler: (status: number) => void) => void
```

</CodeBlock> 

Adjust SDK 包含 [Apple `requestTrackingAuthorizationWithCompletionHandler` 方法](https://developer.apple.com/documentation/apptrackingtransparency/attrackingmanager/3547037-requesttrackingauthorizationwith)的包装器。如果您不想对 ATT 弹窗进行自定义，则可以使用这一包装器。

用户对授权窗口做出响应时，回传方法就会被触发。该方法会将用户的授权状态代码发送至 Adjust 服务器。您可以在回传函数中定义每种状态代码的响应。

您必须指定 ATT 的文本内容。为此，请将文本加入 `Info.plist` 文件中的 `NSUserTrackingUsageDescription` key。
<callout type="tip"> 

如果您使用自定义弹窗，Adjust SDK 也会记录授权状态。如果在初始化之前展示弹窗，那么 SDK 会随安装事件一同发送状态。如果在初始化之后展示弹窗，那么 SDK 会在用户更新状态后立即向 Adjust 服务器发送状态。
</Callout> 

```jsx
Adjust.requestTrackingAuthorizationWithCompletionHandler(function (status) {
   switch (status) {
      case 0:
         // ATTrackingManagerAuthorizationStatusNotDetermined case
         break;
      case 1:
         // ATTrackingManagerAuthorizationStatusRestricted case
         break;
      case 2:
         // ATTrackingManagerAuthorizationStatusDenied case
         break;
      case 3:
         // ATTrackingManagerAuthorizationStatusAuthorized case
         break;
   }
});
```

### 示例 \{\#example\}

该示例展示了当用户与弹窗交互时，我们如何记录一个人类可读的用户授权状态描述。

```jsx
Adjust.requestTrackingAuthorizationWithCompletionHandler(function (status) {
   switch (status) {
      case 0:
         console.log("The user has not responded to the access prompt yet.");
         break;
      case 1:
         console.log(
            "Access to app-related data is blocked at the device level.",
         );
         break;
      case 2:
         console.log(
            "The user has denied access to app-related data for device measurement.",
         );
         break;
      case 3:
         console.log(
            "The user has approved access to app-related data for device measurement.",
         );
         break;
   }
});
```

获取当前授权状态\{\#get\-current\-authorization\-status\}
-------------------------------------------------------

<codeblock title="方法签名"> 

```ts
getAppTrackingAuthorizationStatus: (callback: (authorizationStatus: number) => void) => void
```

</CodeBlock> 

您可以随时读取用户当前授权状态。调用 `getAppTrackingAuthorizationStatus` 方法来以 `number` 形式返回授权状态代码。

```jsx
Adjust.getAppTrackingAuthorizationStatus();
```

### 示例 \{\#example\-1\}

该示例展示了如何收集用户授权状态并将其转化为 `string`。我们会为该信息指定一个名为 `authorizationStatus` 的变量，并将其作为会话合作伙伴参数使用 `"status"` key 传送。

```jsx
var authorizationStatus = String(Adjust.getAppTrackingAuthorizationStatus());
Adjust.addSessionPartnerParameter("status", authorizationStatus);
```

查看授权状态变化 \{\#check\-for\-authorization\-status\-changes\}
----------------------------------------------------------------

<codeblock title="方法签名"> 

```ts
checkForNewAttStatus: () => void
```

</CodeBlock> 

如果使用自定义 ATT 弹窗，那么您需要告知 Adjust SDK 用户的授权状态。调用 `checkForNewAttStatus` 方法，以向 Adjust 服务器发送授权状态。

```jsx
Adjust.checkForNewAttStatus();
```

自定义弹窗时机\{\#custom\-prompt\-timing\}
----------------------------------------

<codeblock title="方法签名"> 

```js
AdjustConfig.prototype.setAttConsentWaitingInterval = function(attConsentWaitingInterval);
```

</CodeBlock> 

如果您的应用包含新手引导流程或教程，那么最好在用户完成新手引导流程或教程后再发送用户的 ATT 许可状态。您可以设置 `attConsentWaitingInterval` 属性将数据发送延迟最多 **120 秒** ，让用户有足够的时间完成初始用户引导。延时结束或用户设置许可状态后，SDK 会将在延迟时间内记录的所有信息以及用户许可状态发送给 Adjust 服务器。
<callout type="note"> 

如果用户在延时结束前关闭应用或在选择授权状态前关闭应用，那么用户重新打开应用时延时将重新开始计时。
</Callout> 

```jsx
const adjustConfig = new AdjustConfig(
   "{YourAppToken}",
   AdjustConfig.EnvironmentSandbox,
);
//...
adjustConfig.setAttConsentWaitingInterval(30);
//...
Adjust.create(adjustConfig);
```

